Fix how to location on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -103,6 +103,6 @@ a:link {
  }   
 
   .how-to {
-    margin-left: -40px;
+    margin: -15px 0 0 -62px;
   }
 }
